# goobersys

./: CHANGELOG.MD  CMakeLists.txt  README.md  builderman.sh  goals.txt  iso.sh  kernel.ld
boot/: bootloader.asm
iso_root/EFI/BOOT/: kernel.efi
iso_root/boot/grub/: grub.cfg
kernel/: main.cc
kernel/arch/x86/: gdt.asm  idt.asm  isr.cc
kernel/drivers/: keyboard.cc  vga.cc
lib/: string.cc
lib/include/lib/: string.h  vector.h  vector.tcc
shell/: shell.cpp
src/: efi.ld  framebuffer.cpp  framebuffer.h  gui_window.cpp  gui_window.h  input_keyboard.cpp  input_keyboard.h  input_mouse.cpp  input_mouse.h  main.cpp  terminal.cpp  uefi_shims.h
src/common/: globals.cpp  globals.h  uefi_shims.h
src/framebuffer/: framebuffer.cpp  framebuffer.h
src/gui/: gui_window.cpp  gui_window.h
src/input/: input_keyboard.cpp  input_keyboard.h  input_mouse.cpp  input_mouse.h
src/terminal/: terminal.cpp  terminal.h
